name:                markov
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/markov#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2017 Author name here
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010

executable markov-exe
  hs-source-dirs:      src
  main-is:             testdriver.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , markov
                     , hmatrix
                     , MonadRandom
  default-language:    Haskell2010
  default-extensions:  BangPatterns

test-suite markov-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , markov
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010
  default-extensions:  BangPatterns

source-repository head
  type:     git
  location: https://github.com/githubuser/markov
